added processed mortgage data to data folder

--- a/notebooks/MortgageDataProcessing.ipynb
+++ b/notebooks/MortgageDataProcessing.ipynb
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "after-stamp",
+   "id": "modified-radiation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,6 +535,16 @@
     "mortgage_delinq_df['Region'] = np.select(conditions, regions)\n",
     "\n",
     "mortgage_delinq_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ideal-translator",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mortgage_delinq_df.to_csv(r'mortgage.csv', index = False)"
    ]
   },
   {
