--- a/notebooks/clean-census-and-covid.ipynb
+++ b/notebooks/clean-census-and-covid.ipynb
@@ -27,9 +27,11 @@
     "raw_geo_covid_cases_file = raw_data_dir / \"COVID-19_Case_Surveillance_Public_Use_Data_with_Geography.csv\"\n",
     "msa_file = raw_data_dir / \"msa.csv\"\n",
     "\n",
+    "\n",
     "interim_rental_vacancy_file = interim_data_dir / \"rental_vacancy_rates_75.csv\"\n",
     "interim_homeowner_vacancy_file = interim_data_dir / \"homeowner_vacancy_rates_75.csv\"\n",
-    "interim_homeownership_file = interim_data_dir / \"homeownership_rates_75.csv\""
+    "interim_homeownership_file = interim_data_dir / \"homeownership_rates_75.csv\"\n",
+    "population_file = interim_data_dir / \"MSA_populations.csv\""
    ]
   },
   {
@@ -2282,25 +2284,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "msa = pd.read_csv(msa_file)\n",
     "msa[\"county_fips_code\"] = msa[\"fipsstatecode\"]*1000 + msa[\"fipscountycode\"]\n",
-    "msa = msa[[\"county_fips_code\",\"statename\",\"countycountyequivalent\",\"cbsatitle\"]].dropna()\n",
+    "msa = msa[[\"cbsacode\",\"county_fips_code\",\"statename\",\"countycountyequivalent\",\"cbsatitle\"]].dropna()\n",
     "geo_msa = geo.merge(msa,how=\"left\",on=\"county_fips_code\")\n",
-    "geo_msa = geo_msa[[\"case_month\",\"hosp\",\"icu\",\"death\",\"race\",\"ethnicity\",\"cbsatitle\",\n",
-    "                   \"statename\",\"countycountyequivalent\",\"county_fips_code\",\"case\"]]\n",
-    "geo_msa = geo_msa.rename(columns={\"countycountyequivalent\":\"county\",\n",
-    "                                  \"statename\":\"state\",\"cbsatitle\":\"cbsa_title\"})\n",
+    "geo_msa[\"cbsacode\"] = geo_msa[\"cbsacode\"].fillna(0).astype(int)\n",
     "geo_msa[\"county_fips_code\"] = geo_msa[\"county_fips_code\"].fillna(0).astype(int)\n",
-    "geo_msa[\"county\"] = geo_msa[\"county\"].str.replace(\" County\",\"\",regex=False)"
+    "geo_msa = geo_msa[[\"case_month\",\"hosp\",\"icu\",\"death\",\"race\",\"ethnicity\",\"cbsatitle\", \"cbsacode\",\n",
+    "                  \"county_fips_code\",\"case\"]]\n",
+    "geo_msa = geo_msa.rename(columns={\"cbsatitle\":\"cbsa_title\",\"cbsacode\":\"cbsa_code\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2331,8 +2332,7 @@
        "      <th>race</th>\n",
        "      <th>ethnicity</th>\n",
        "      <th>cbsa_title</th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
+       "      <th>cbsa_code</th>\n",
        "      <th>county_fips_code</th>\n",
        "      <th>case</th>\n",
        "    </tr>\n",
@@ -2347,8 +2347,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2361,8 +2360,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2375,8 +2373,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2389,8 +2386,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2403,8 +2399,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2417,8 +2412,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2431,8 +2425,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2445,8 +2438,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2459,8 +2451,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2473,8 +2464,7 @@
        "      <td>White</td>\n",
        "      <td>Non-Hispanic/Latino</td>\n",
        "      <td>Yuma, AZ</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yuma</td>\n",
+       "      <td>49740</td>\n",
        "      <td>4027</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -2495,20 +2485,20 @@
        "21950112    2020-12     1    0      1  White  Non-Hispanic/Latino   Yuma, AZ   \n",
        "21950113    2020-12     1    0      1  White  Non-Hispanic/Latino   Yuma, AZ   \n",
        "\n",
-       "            state county  county_fips_code  case  \n",
-       "21950104  Arizona   Yuma              4027     1  \n",
-       "21950105  Arizona   Yuma              4027     1  \n",
-       "21950106  Arizona   Yuma              4027     1  \n",
-       "21950107  Arizona   Yuma              4027     1  \n",
-       "21950108  Arizona   Yuma              4027     1  \n",
-       "21950109  Arizona   Yuma              4027     1  \n",
-       "21950110  Arizona   Yuma              4027     1  \n",
-       "21950111  Arizona   Yuma              4027     1  \n",
-       "21950112  Arizona   Yuma              4027     1  \n",
-       "21950113  Arizona   Yuma              4027     1  "
+       "          cbsa_code  county_fips_code  case  \n",
+       "21950104      49740              4027     1  \n",
+       "21950105      49740              4027     1  \n",
+       "21950106      49740              4027     1  \n",
+       "21950107      49740              4027     1  \n",
+       "21950108      49740              4027     1  \n",
+       "21950109      49740              4027     1  \n",
+       "21950110      49740              4027     1  \n",
+       "21950111      49740              4027     1  \n",
+       "21950112      49740              4027     1  \n",
+       "21950113      49740              4027     1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2522,12 +2512,177 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## CBSA (MSA) Population Data\n",
+    "Learn More: https://www.census.gov/data/tables/time-series/demo/popest/2010s-total-metro-and-micro-statistical-areas.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process US population file\n",
+    "pop_df = pd.read_csv(population_file)\n",
+    "pop_df = pop_df.rename(columns={\"CBSA\":\"cbsa_code\",\"POPESTIMATE2019\":\"population\"})\n",
+    "pop_df = pop_df.drop(columns=[\"STCOU\",\"LSAD\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group cases by month and MSA\n",
+    "geo_df = geo_msa.groupby([\"case_month\",\"cbsa_title\",\"cbsa_code\"]).sum().drop(columns=[\"county_fips_code\"])\n",
+    "geo_df.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_month</th>\n",
+       "      <th>cbsa_title</th>\n",
+       "      <th>cbsa_code</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>hosp</th>\n",
+       "      <th>icu</th>\n",
+       "      <th>deaths</th>\n",
+       "      <th>cases_per_capita</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28419</th>\n",
+       "      <td>2021-03</td>\n",
+       "      <td>Yuba City, CA</td>\n",
+       "      <td>49700</td>\n",
+       "      <td>144</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001830</td>\n",
+       "      <td>78668.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28420</th>\n",
+       "      <td>2021-03</td>\n",
+       "      <td>Yuma, AZ</td>\n",
+       "      <td>49740</td>\n",
+       "      <td>110</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000515</td>\n",
+       "      <td>213787.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28421</th>\n",
+       "      <td>2021-03</td>\n",
+       "      <td>Yuma, AZ</td>\n",
+       "      <td>49740</td>\n",
+       "      <td>110</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000515</td>\n",
+       "      <td>213787.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28422</th>\n",
+       "      <td>2021-03</td>\n",
+       "      <td>Zanesville, OH</td>\n",
+       "      <td>49780</td>\n",
+       "      <td>73</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000847</td>\n",
+       "      <td>86215.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28423</th>\n",
+       "      <td>2021-03</td>\n",
+       "      <td>Zanesville, OH</td>\n",
+       "      <td>49780</td>\n",
+       "      <td>73</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000847</td>\n",
+       "      <td>86215.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      case_month      cbsa_title  cbsa_code  cases  hosp  icu  deaths  \\\n",
+       "28419    2021-03   Yuba City, CA      49700    144    16    1       0   \n",
+       "28420    2021-03        Yuma, AZ      49740    110     4    0       0   \n",
+       "28421    2021-03        Yuma, AZ      49740    110     4    0       0   \n",
+       "28422    2021-03  Zanesville, OH      49780     73     5    0       0   \n",
+       "28423    2021-03  Zanesville, OH      49780     73     5    0       0   \n",
+       "\n",
+       "       cases_per_capita  population  \n",
+       "28419          0.001830     78668.0  \n",
+       "28420          0.000515    213787.0  \n",
+       "28421          0.000515    213787.0  \n",
+       "28422          0.000847     86215.0  \n",
+       "28423          0.000847     86215.0  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge population DataFrame with Covid-19 Cases w/ Geo DataFrame\n",
+    "geo_pop = geo_df.merge(pop_df,on=\"cbsa_code\",how=\"left\")\n",
+    "geo_pop[\"cases_per_capita\"] = geo_pop[\"case\"] / geo_pop[\"population\"]\n",
+    "geo_pop = geo_pop.rename(columns={\"case\":\"cases\",\"death\":\"deaths\"})\n",
+    "geo_pop = geo_pop[[\"case_month\",\"cbsa_title\",\"cbsa_code\",\"cases\",\"hosp\",\n",
+    "                  \"icu\",\"deaths\",\"cases_per_capita\",\"population\"]]\n",
+    "geo_pop.to_csv(processed_data_dir / \"Monthly_COVID-19_Cases_By_MSA.csv\",index=False)\n",
+    "geo_pop.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Split CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2554,7 +2709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
